[gd_scene load_steps=4 format=3 uid="uid://cbvmsquvyr6q8"]

[ext_resource type="Script" path="res://Start Menu/start_menu.gd" id="1_lhma2"]
[ext_resource type="Texture2D" uid="uid://dn2wr8capp05v" path="res://Start Menu/DALLÂ·E 2024-10-18 01.11.19 - Pixel art depicting evil red squares from hell with sinister faces, no limbs, attacking a purple-haired detective. The detective, dressed in a long tr.webp" id="2_lit8w"]
[ext_resource type="AudioStream" uid="uid://dn0jrn85euitq" path="res://Start Menu/The Shadows.mp3" id="3_rlp8v"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_lhma2")

[node name="HFlowContainer" type="VFlowContainer" parent="."]
layout_mode = 0
offset_left = 375.0
offset_top = 256.0
offset_right = 688.0
offset_bottom = 373.0
scale = Vector2(3, 3)

[node name="EasyButton" type="Button" parent="HFlowContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.909804, 0.388235, 1)
theme_override_colors/font_color = Color(0, 0.909804, 0.388235, 1)
text = "Easy Mode"

[node name="NormalButton" type="Button" parent="HFlowContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Normal Mode"

[node name="CrazyButton" type="Button" parent="HFlowContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Crazy Mode
"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 208.0
offset_top = -5.0
offset_right = 1107.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0.054902, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Doom Squares
"

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(574.5, 325)
scale = Vector2(1.12402, 0.630859)
texture = ExtResource("2_lit8w")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_rlp8v")
autoplay = true
parameters/looping = true

[node name="Info" type="Button" parent="."]
layout_mode = 0
offset_left = 886.0
offset_top = 560.0
offset_right = 1142.0
offset_bottom = 623.0
theme_override_colors/font_hover_color = Color(0, 0.662745, 0.784314, 1)
theme_override_colors/font_color = Color(100, 100, 100, 1)
theme_override_font_sizes/font_size = 40
text = "How To Play"
